--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -2,10 +2,12 @@
 	
 
 {% block content %}
+<div class="col-sm-6 col-sm-offset-3">
 <h1>Form</h1>
 
 <form method='POST' action="">{% csrf_token %}
 {{ form.as_p }}
-<input type="submit" value="Create post" name="">
+<input type="submit" class="btn btn-default" value="Create post" name="">
 </form>
+</div>
 {% endblock content %}
