--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -10,6 +10,9 @@
 
   <div class="col-sm-12">
     <div class="thumbnail">
+    {% if obj.image %}
+      <img src="{{ obj.image.url }}" class="img-responsive" />
+    {% endif %}
       <!-- <img src="..." alt="..."> -->
       <div class="caption">
         <h3><a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a><small>{{ obj.timestamp|timesince }} ago</small></h3>
@@ -18,10 +21,26 @@
       </div>
     </div>
   </div>
+  <hr>
 </div>
 
-<!-- {% cycle "" "</div><div class='row'>"%} -->
 {% endfor %}
+
+<div class="pagination">
+    <span class="step-links">
+        {% if object_list.has_previous %}
+            <a href="?{{page_request_var }}={{ object_list.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.
+        </span>
+
+        {% if object_list.has_next %}
+            <a href="?{{page_request_var }}={{ object_list.next_page_number }}">next</a>
+        {% endif %}
+    </span>
 </div>
+
 </div>
 {% endblock content %}
